# pyam

./: RELEASE_NOTES.md  pyproject.toml  setup.py
pyam/: __init__.py  _aggregate.py  core.py  ixmp4.py  utils.py
pyam_analysis/: core.py
tests/: conftest.py  test_core.py  test_ixmp4.py
